<resources>
    <string name="app_name">DRM APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_Entry">Add Entry</string>
    <string name="menu_view_Last">View All Entries</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_manage_notifications">Manage Notifications</string>
    <string name="notifications_heading">Here you can manage the amount and time of notifications</string>
    <string name="addTimeButtonText"> </string>
    <string name="noTimePickedText">No Time for Notification picked</string>
    <string name="cancleTimePicking">Cancel Time Picking</string>
    <string name="noTimeSetForNotifications">No Time for Notifications selected so far</string>
    <string name="pressToAddNotificationTime">Add Notification Time</string>

    <string name="textSubmitButton">Submit</string>

    <!--AddEntryFragement:-->
    <string name="textMorningButton">Morning</string>
    <string name="textEveningButton">Evening</string>
    <string name="textAfternoonButton">Afternoon</string>
    <string name="textNightButton">Night</string>
    <string name="timeText">At what time did you perform the activity?</string>

    <!--ActivitiesPremadeFragement:-->
    <string name="textEatingDrinkingButton">Eating/Drinking</string>
    <string name="textCookingButton">Cooking</string>
    <string name="textWorkingStudyingButton">Working/Studying</string>
    <string name="textCareWorkButton">Care Work</string>
    <string name="textChoresButton">Chores</string>
    <string name="textHobbyButton">Hobby</string>
    <string name="textLeisureTimeButton">Leisure Time</string>
    <string name="textOtherActivityButton">Other</string>
    <string name="activityText">What were you doing?</string>

    <!--AddEntrySplitFragement:-->
    <string name="addentry_split_chooseEntry">Entry</string>
    <string name="addentry_split_chooseQuickEntry">Quick Entry</string>

    <!--EmojiFragments-->
    <string name="emojiText">Which emoji represents your feelings best?</string>

    <!--HomeFragment-->
    <string name="textAddEntryButton">Add Entry</string>
    <string name="textViewLastButton">View All Entries</string>

    <!--ThoughtsFragment-->
    <string name="thoughtsText">Which thoughts occurred?</string>

    <!--NoteQuickEntryFragment-->
    <string name="noteText">What would you \n like to note?</string>

    <!--SuccessFragment-->
    <string name="textEntrySucess">Your entry is complete</string>
    <string name="saveEntryButton">Save</string>
    <string name="newEntrySucessButton">New Entry</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>