<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addEntry.AddEntryFragment">

    <Button
        android:id="@+id/timedate_button_morning"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:gravity="center"

        android:text="@string/textMorningButton"
        app:layout_constraintBottom_toTopOf="@+id/timedate_button_afternoon"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4_h"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline1_h"
        app:layout_constraintTop_toBottomOf="@+id/timedatetext" />

    <Button
        android:id="@+id/timedate_button_afternoon"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/textAfternoonButton"
        app:layout_constraintBottom_toTopOf="@+id/timedate_button_evening"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4_h"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline1_h"
        app:layout_constraintTop_toBottomOf="@+id/timedate_button_morning" />

    <Button
        android:id="@+id/timedate_button_evening"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/textEveningButton"
        app:layout_constraintBottom_toTopOf="@+id/timedate_button_night"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4_h"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1_h"
        app:layout_constraintTop_toBottomOf="@+id/timedate_button_afternoon" />

    <Button
        android:id="@+id/timedate_button_night"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:text="@string/textNightButton"
        app:layout_constraintBottom_toTopOf="@+id/guideline3_v"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline4_h"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1_h"
        app:layout_constraintTop_toBottomOf="@+id/timedate_button_evening" />

    <TextView
        android:id="@+id/timedatetext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/timeText"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2_v"
        app:layout_constraintEnd_toStartOf="@+id/guideline4_h"
        app:layout_constraintStart_toStartOf="@+id/guideline1_h"
        app:layout_constraintTop_toTopOf="@+id/guideline1_v" />

    <ProgressBar
        android:id="@+id/pBarTime"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:progress="2"

        android:progressBackgroundTint="@color/lightPurpel"

        app:layout_constraintBottom_toTopOf="@+id/guideline1_v"
        app:layout_constraintEnd_toStartOf="@+id/guideline4_h"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1_h"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75
" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />


</androidx.constraintlayout.widget.ConstraintLayout>